--- a/view/html/book/book_category.html
+++ b/view/html/book/book_category.html
@@ -7,8 +7,8 @@
       name="viewport"
       content="width=device-width, initial-scale=1, shrink-to-fit=no"
     />
-    <link rel="icon" href="../../assets/img/fevicon.png" type="image/png" />
-    <title>Eiser ecommerce</title>
+    <link rel="icon" href="../assets/img/favicon.png" type="image/png" />
+    <title>BookVerse</title>
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="../../assets/css/bootstrap.css" />
     <link rel="stylesheet" href="../../assets/vendors/linericon/style.css" />
