--- a/view/html/book/category_of_department.html
+++ b/view/html/book/category_of_department.html
@@ -9,8 +9,8 @@
       content="width=device-width, initial-scale=1, shrink-to-fit=no"
     />
     <base href="/">
-    <link rel="icon" href="../../assets/img/fevicon.png" type="image/png" />
-    <title>Eiser ecommerce</title>
+    <link rel="icon" href="../assets/img/favicon.png" type="image/png" />
+    <title>BookVerse</title>
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="../../assets/css/bootstrap.css" />
     <link rel="stylesheet" href="../../assets/vendors/linericon/style.css" />
