--- a/view/html/user/profile.html
+++ b/view/html/user/profile.html
@@ -9,7 +9,8 @@
   <meta name="description" content="">
   <meta name="author" content="">
 
-  <title>SB Admin 2 - Register</title>
+  <link rel="icon" href="../../assets/img/favicon.png" type="image/png" />
+  <title>BookVerse</title>
 
   <!-- Custom fonts for this template-->
   <link href="../../assets/vendors/fontawesome-free/css/all.min.css" rel="stylesheet" type="text/css">
@@ -30,6 +31,10 @@
           <div class="col-lg-7">
             <div class="p-5">
               <div class="text-center">
+                <a class="navbar-brand logo_h" href="/">
+                  <img src="../../assets/img/Bookverse4-edited.png" alt=""/>
+                </a>
+                <hr>
                 <h1 class="h4 text-gray-900 mb-4">User Profile</h1>
               </div>
               <form class="user"  method="post" action="/user/useraccount/register" onSubmit = "return checkPassword(this)">
