--- a/view/html/book/single-book.html
+++ b/view/html/book/single-book.html
@@ -8,7 +8,7 @@
       content="width=device-width, initial-scale=1, shrink-to-fit=no"
     />
     <link rel="icon" href="../assets/img/favicon.png" type="image/png" />
-    <title>BookVerse</title>le>
+    <title>BookVerse</title>
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="../../assets/css/bootstrap.css" />
     <link rel="stylesheet" href="../../assets/vendors/linericon/style.css" />
