--- a/view/html/book/book_page.html
+++ b/view/html/book/book_page.html
@@ -7,7 +7,7 @@
             name="viewport"
             content="width=device-width, initial-scale=1, shrink-to-fit=no"
     />
-    <link rel="icon" href="../assets/img/favicon.png" type="image/png" />
+    <link rel="icon" href="../../assets/img/favicon.png" type="image/png" />
     <title>BookVerse</title>
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="../../assets/css/bootstrap.css"/>
@@ -79,7 +79,7 @@
                             <div class="form-group">
                                     <label class="col-sm-10 control-label">Book Language</label>
                                     <div class="col-md-12">
-                                        <select name="language" class="selectpicker " data-title="Single Select"
+                                        <select name="language" class=" " data-title="Single Select"
                                                 data-style="btn-default btn-outline"
                                                 data-menu-style="dropdown-blue">
                                             <option  disabled selected>Select One Language</option>
