--- a/view/html/template/navigator.html
+++ b/view/html/template/navigator.html
@@ -159,7 +159,10 @@
                             <input type="checkbox" class="custom-control-input" id="customCheck1">
                             <label class="custom-control-label" for="customCheck1">Remember password</label>
                         </div>
-                        <button class="btn btn-lg btn-primary btn-block text-uppercase" type="submit">Sign in</button>
+
+                        <button class="btn btn-lg btn-primary btn-block text-uppercase" id="btnFetch" type="submit">Sign in</button>
+
+
                         <hr class="my-4">
                         <p class="text-center">If you dont have An account yet, you can create one in a minute</p>
 
@@ -197,7 +200,7 @@
                             <label for="inputEmail">Email address</label>
                         </div>
 
-                        <button class="btn btn-lg btn-primary btn-block text-uppercase" type="submit">Sign up</button>
+                        <button class="btn btn-lg btn-primary btn-block text-uppercase" id="btnsingUp" type="submit">Sign up</button>
                         <hr class="my-4">
                         <p>We will send you an email with a temporary password to confirm your registration</p>
                     </form>
