--- a/view/html/book/book_location.html
+++ b/view/html/book/book_location.html
@@ -7,8 +7,21 @@
             name="viewport"
             content="width=device-width, initial-scale=1, shrink-to-fit=no"
     />
-    <link rel="icon" href="../assets/img/favicon.png" type="image/png" />
+    <link rel="icon" href="../../assets/img/favicon.png" type="image/png"/>
     <title>BookVerse</title>
+    <!-- Bootstrap CSS -->
+    <link rel="icon" href="../../assets/img/favicon.png" type="image/png"/>
+    <link href="../../assets/vendor/fontawesome-free/css/all.min.css" rel="stylesheet" type="text/css">
+    <link href="https://fonts.googleapis.com/css?family=Nunito:200,200i,300,300i,400,400i,600,600i,700,700i,800,800i,900,900i"
+          rel="stylesheet">
+
+    <!-- Custom styles for this template -->
+    <link href="../../assets/css/sb-admin-2.min.css" rel="stylesheet">
+
+    <!-- Custom styles for this page -->
+    <link href="../../assets/vendor/datatables/dataTables.bootstrap4.min.css" rel="stylesheet">
+
+
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="../../assets/css/bootstrap.css"/>
     <link rel="stylesheet" href="../../assets/vendors/linericon/style.css"/>
@@ -20,9 +33,9 @@
     <link rel="stylesheet" href="../../assets/vendors/animate-css/animate.css"/>
     <link rel="stylesheet" href="../../assets/vendors/jquery-ui/jquery-ui.css"/>
     <!-- main css -->
-    <link rel="stylesheet" href="../../assets/css/style.css" />
-    <link rel="stylesheet" href="../../assets/css/responsive.css" />
-    <link rel="stylesheet" href="../../assets/css/login.css" />
+    <link rel="stylesheet" href="../../assets/css/style.css"/>
+    <link rel="stylesheet" href="../../assets/css/responsive.css"/>
+    <link rel="stylesheet" href="../../assets/css/login.css"/>
 </head>
 
 <body>
@@ -38,31 +51,42 @@
             <div class="card card-signin my-5">
                 <div class="card-body">
                     <h5 class="card-title text-center">Book Location</h5>
-                    <form class="form-signin" method="post" action="/book/post_book_location"  >
+                    <form class="user" method="post" action="/book/post_book_location">
                         <fieldset>
                             <div class="form-group">
-                                    <label class="col-sm-10 control-label">Book Location(Town/city)</label>
-                                    <div class="col-sm-12">
-                                        <input type="text" name="place" class="form-control">
-                                    </div>
+                                <label class="col-sm-10 control-label">Book Location(Town/city)</label>
+                                <div class="col-sm-12">
+                                    <input type="text" name="place" class="form-control">
+                                </div>
                             </div>
                         </fieldset>
                         <fieldset>
-                            <label class="col-sm-10 control-label">Location Description(Suburb, Street, house/building number)</label>
+                            <div class="form-group">
+                                <label class="col-sm-12 control-label">Location Description(Suburb, Street,
+                                    house/building number).</label>
+                                <div class="col-sm-12">
                             <textarea class="col-sm-12" style="height: 100px" name="place_description"
-                                      placeholder="Type a location description here...." tabindex="5" required></textarea>
+                                      placeholder="Type a location description here...." tabindex="5" maxlength="150"
+                                      required></textarea>
+                                </div>
+                                <p class="col-sm-12 control-label text-xs">Please provide a clear description about where an interested person can collect
+                                    the book.</p>
+                            </div>
                         </fieldset>
-                        <h7>Please provide a clear description about where an interested person can collect the book</h7>
 
-                        <hr class="my-4">
-                        <h6>Please provide you book description. This will appear on your book post</h6>
                         <fieldset>
-                            <label class="col-sm-10 control-label">Post Description</label>
-                            <textarea class="col-sm-12" style="height: 100px" name="description"
-                                      placeholder="Type your post description here...." tabindex="5" required></textarea>
+                            <div class="form-group">
+                                <label class="col-sm-12 control-label">Please provide you book description. This will
+                                    appear on your book post.</label>
+                                <div class="col-sm-12">
+                                    <textarea class="col-sm-12" style="height: 100px" name="description"
+                                              placeholder="Type your post description here...." tabindex="5"
+                                              maxlength="150" required></textarea>
+                                </div>
+                            </div>
                         </fieldset>
 
-                        <hr class="my-4">
+
 
                         <button class="btn btn-lg btn-primary btn-block text-uppercase" type="submit">Post</button>
 
@@ -112,32 +136,25 @@
 <!--================End Contact Success and Error message Area =================-->
 
 
-
-
 <!-- Optional JavaScript -->
 <!-- jQuery first, then Popper.js, then Bootstrap JS -->
+<!-- Bootstrap core JavaScript-->
+<script src="../../assets/vendor/jquery/jquery.min.js"></script>
+<script src="../../assets/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
+
+<!-- Core plugin JavaScript-->
+<script src="../../assets/vendor/jquery-easing/jquery.easing.min.js"></script>
+
+<!-- Custom scripts for all pages-->
+<script src="../../assets/js/sb-admin-2.min.js"></script>
+
+<!-- Page level plugins -->
+<script src="../../assets/vendor/datatables/jquery.dataTables.min.js"></script>
+<script src="../../assets/vendor/datatables/dataTables.bootstrap4.min.js"></script>
+
+<!-- Page level custom scripts -->
+<script src="../../assets/js/demo/datatables-demo.js"></script>
 <script src="../../assets/js/jquery-3.2.1.min.js"></script>
-<script src="../../assets/js/popper.js"></script>
-<script src="../../assets/js/bootstrap.min.js"></script>
-<script src="../../assets/js/stellar.js"></script>
-<script src="../../assets/vendors/lightbox/simpleLightbox.min.js"></script>
-<script src="../../assets/vendors/nice-select/js/jquery.nice-select.min.js"></script>
-<script src="../../assets/vendors/isotope/imagesloaded.pkgd.min.js"></script>
-<script src="../../assets/vendors/isotope/isotope-min.js"></script>
-<script src="../../assets/vendors/owl-carousel/owl.carousel.min.js"></script>
-<script src="../../assets/vendors/jquery-ui/jquery-ui.js"></script>
-<script src="../../assets/js/jquery.ajaxchimp.min.js"></script>
-<script src="../../assets/js/mail-script.js"></script>
-<script src="../../assets/vendors/counter-up/jquery.waypoints.min.js"></script>
-<script src="../../assets/vendors/counter-up/jquery.counterup.js"></script>
-<!-- contact js -->
-<script src="../../assets/js/jquery.form.js"></script>
-<script src="../../assets/js/jquery.validate.min.js"></script>
-<script src="../../assets/js/contact.js"></script>
-<!--gmaps Js-->
-<!--script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCjCGmQ0Uq4exrzdcL6rvxywDDOvfAu6eE"></script-->
-<script src="../../assets/js/gmaps.min.js"></script>
-<script src="../../assets/js/theme.js"></script>
 </body>
 
 </html>
